--- a/email_list.css
+++ b/email_list.css
@@ -1,27 +1,24 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-    margin: 0 auto;
+    background-color: lightgrey;
+    margin: 20px auto;
     width: 670px;
     border: 3px solid blue;
     padding: 0 2em 1em;
 }
-
 h1 {
     color: blue;
 }
-
 label {
     float: left;
     width: 11em;
     text-align: right;
 }
-
 input {
+    width: 12em;
     margin-left: 1em;
     margin-bottom: 0.5em;
 }
-
 span {
     color: red;
 }
